--- a/index.html
+++ b/index.html
@@ -227,13 +227,10 @@
         <div class="menu-grid">
           <div class="menu-item">
             <div class="menu-image">
-              <img
-                src="https://images.unsplash.com/photo-1511920170033-f8396924c348?w=800&q=80"
-                alt="Espresso"
-              />
+              <img src="./img/lemonade.jpg" alt="Lemonade Coffee" />
             </div>
             <div class="menu-content">
-              <h3>Espresso</h3>
+              <h3>Lemonade Coffee</h3>
               <p>
                 Kopi murni dengan cita rasa kuat dan aroma yang menggugah selera
               </p>
@@ -243,13 +240,10 @@
 
           <div class="menu-item">
             <div class="menu-image">
-              <img
-                src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=800&q=80"
-                alt="Cappuccino"
-              />
+              <img src="./img/tella.jpg" alt="Mocatella" />
             </div>
             <div class="menu-content">
-              <h3>Cappuccino</h3>
+              <h3>Mocatella</h3>
               <p>
                 Perpaduan sempurna antara espresso, susu steamed, dan foam yang
                 lembut
@@ -260,13 +254,10 @@
 
           <div class="menu-item">
             <div class="menu-image">
-              <img
-                src="https://images.unsplash.com/photo-1541167760496-1628856ab772?w=800&q=80"
-                alt="Caramel Latte"
-              />
+              <img src="./img/kiwi.jpg" alt="Kiwi Black" />
             </div>
             <div class="menu-content">
-              <h3>Caramel Latte</h3>
+              <h3>Kiwi Black</h3>
               <p>Latte dengan sentuhan manis karamel yang menggoda</p>
               <div class="price">Rp 40.000</div>
             </div>
@@ -274,13 +265,10 @@
 
           <div class="menu-item">
             <div class="menu-image">
-              <img
-                src="https://images.unsplash.com/photo-1510627498534-cf7e9002facc?w=800&q=80"
-                alt="Iced Coffee"
-              />
+              <img src="./img/berry.jpg" alt="Red Berry" />
             </div>
             <div class="menu-content">
-              <h3>Iced Coffee</h3>
+              <h3>Red Berry</h3>
               <p>Kopi dingin yang menyegarkan untuk hari yang panas</p>
               <div class="price">Rp 30.000</div>
             </div>
@@ -288,13 +276,10 @@
 
           <div class="menu-item">
             <div class="menu-image">
-              <img
-                src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=800&q=80"
-                alt="Mocha"
-              />
+              <img src="./img/butter.png" alt="Butterscotch" />
             </div>
             <div class="menu-content">
-              <h3>Mocha</h3>
+              <h3>Butterscotch</h3>
               <p>Kombinasi lezat kopi dan cokelat yang creamy</p>
               <div class="price">Rp 38.000</div>
             </div>
@@ -302,13 +287,10 @@
 
           <div class="menu-item">
             <div class="menu-image">
-              <img
-                src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?w=800&q=80"
-                alt="Affogato"
-              />
+              <img src="./img/icekopilingga.png" alt="Es Kopi Lingga" />
             </div>
             <div class="menu-content">
-              <h3>Affogato</h3>
+              <h3>Es Kopi Lingga</h3>
               <p>Es krim vanilla disiram dengan espresso panas</p>
               <div class="price">Rp 42.000</div>
             </div>
@@ -316,7 +298,7 @@
           <div class="menu-cta">
             <a
               class="order-btn"
-              href="https://drive.google.com/drive/folders/YOUR_DRIVE_FOLDER_ID"
+              href="https://drive.google.com/file/d/182RcGG46QSnt-v8Ms8cv95KqJRNDTjkR/view"
               target="_blank"
               rel="noopener"
               >Lihat Semua Menu</a
