--- a/index.html
+++ b/index.html
@@ -58,21 +58,10 @@
             />
           </div>
           <div class="hero-text">
-            <p
-              style="
-                font-size: 42px;
-                font-style: italic;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-              "
-            >
+            <p class="hero-main-title">
               #<strong>FIND</strong>YOUR<strong>MOMENT</strong>
             </p>
-            <p
-              style="
-                font-size: 24px;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-              "
-            >
+            <p class="hero-subtitle">
               FIND US <strong>MENU ANDALAN KAMI</strong>
             </p>
             <p>
@@ -98,21 +87,10 @@
             />
           </div>
           <div class="hero-text">
-            <p
-              style="
-                font-size: 42px;
-                font-style: italic;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-              "
-            >
+            <p class="hero-main-title">
               #<strong>FIND</strong>YOUR<strong>MOMENT</strong>
             </p>
-            <p
-              style="
-                font-size: 24px;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-              "
-            >
+            <p class="hero-subtitle">
               FIND US <strong>MENU ANDALAN KAMI</strong>
             </p>
             <p>
