--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-      <div class="hero-content active" data-slide="0">
+      <div class="hero-content">
         <div class="hero-slide-inner">
           <div class="hero-image">
             <img
@@ -76,40 +76,6 @@
             <a class="order-btn" href="#reservasi">Order Now</a>
           </div>
         </div>
-      </div>
-
-      <div class="hero-content" data-slide="1">
-        <div class="hero-slide-inner">
-          <div class="hero-image">
-            <img
-              src="https://images.unsplash.com/photo-1517487881594-2787fef5ebf7?w=500"
-              alt="Iced Coffee"
-            />
-          </div>
-          <div class="hero-text">
-            <p class="hero-main-title">
-              #<strong>FIND</strong>YOUR<strong>MOMENT</strong>
-            </p>
-            <p class="hero-subtitle">
-              FIND US <strong>MENU ANDALAN KAMI</strong>
-            </p>
-            <p>
-              Setiap sajian <strong>ANDALAN KAMI</strong> merupakan kurasi dari
-              proses perjalanan kedai kopi kami. Tentu saja, produk ini
-              terbentuk dari hasil kalibrasi antara bahan berkualitas dan
-              ketulusan dalam menjaga keseimbangan serta kehangatan untuk
-              menamani momenmu. Maka dari itu, D’Lingga Coffee selalu mencoba
-              untuk membawa kamu pada pengalaman yang bukan sekedar rasa, tetapi
-              diimbangi oleh suasana dan kehangatan dari tiap sudutnya.
-            </p>
-            <a class="order-btn" href="#reservasi">Order Now</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-dots">
-        <div class="dot active" data-slide="0"></div>
-        <div class="dot" data-slide="1"></div>
       </div>
     </section>
 
@@ -210,7 +176,8 @@
             <div class="menu-content">
               <h3>Lemonade Coffee</h3>
               <p>
-                Kopi murni dengan cita rasa kuat dan aroma yang menggugah selera
+                Sensasi menyegarkan dari sari buah lemon dipadukan dengan
+                espresso yang akan membuat harimu lebih semangat.
               </p>
               <div class="price">Rp 18.000</div>
             </div>
@@ -223,8 +190,22 @@
             <div class="menu-content">
               <h3>Mocatella</h3>
               <p>
-                Perpaduan sempurna antara espresso, susu steamed, dan foam yang
-                lembut
+                Kombinasi cokelat premium dan hazelnut dapat mengatur ulang mood
+                kamu.
+              </p>
+              <div class="price">Rp 20.000</div>
+            </div>
+          </div>
+
+          <div class="menu-item">
+            <div class="menu-image">
+              <img src="./img/butter.png" alt="Butterscotch" />
+            </div>
+            <div class="menu-content">
+              <h3>Butterscotch</h3>
+              <p>
+                Kelembutan mentega yang disatukan dengan palm sugar memberi
+                sensasi coffee candy yang dapat membuka inspirasimu.
               </p>
               <div class="price">Rp 20.000</div>
             </div>
@@ -236,7 +217,10 @@
             </div>
             <div class="menu-content">
               <h3>Kiwi Black</h3>
-              <p>Latte dengan sentuhan manis karamel yang menggoda</p>
+              <p>
+                Perpaduan sari buah apel, bunga dan kiwi tentunya pas untuk kamu
+                yang ingin menikmati waktu bersantai.
+              </p>
               <div class="price">Rp 15.000</div>
             </div>
           </div>
@@ -247,19 +231,11 @@
             </div>
             <div class="menu-content">
               <h3>Red Berry</h3>
-              <p>Kopi dingin yang menyegarkan untuk hari yang panas</p>
+              <p>
+                Strawberry jam dengan tea based yang akan membuat hati dan
+                pikiranmu rileks.
+              </p>
               <div class="price">Rp 16.000</div>
-            </div>
-          </div>
-
-          <div class="menu-item">
-            <div class="menu-image">
-              <img src="./img/butter.png" alt="Butterscotch" />
-            </div>
-            <div class="menu-content">
-              <h3>Butterscotch</h3>
-              <p>Kombinasi lezat kopi dan cokelat yang creamy</p>
-              <div class="price">Rp 20.000</div>
             </div>
           </div>
 
@@ -269,7 +245,10 @@
             </div>
             <div class="menu-content">
               <h3>Es Kopi Lingga</h3>
-              <p>Es krim vanilla disiram dengan espresso panas</p>
+              <p>
+                Racikan dari kurasi perjalanan kedai kopi ini tentunya membuat
+                rasa yang akan selalu kamu ingat.
+              </p>
               <div class="price">Rp 21.000</div>
             </div>
           </div>
